# video-claw-api

./: render.yaml
backend/: .gitignore  __init__.py  api_server.py  config.py  config.yaml  config.yaml.example  fix_session.py  fix_session_reference.py  fix_session_video.py  pyproject.toml  requirements.txt  session.py  test_agnes_video.py  trigger_reference.py  trigger_video.py
backend/api/: __init__.py  app.py  dependencies.py  logging_config.py  simple_auth.py
backend/api/routers/: __init__.py  auth.py  configuration.py  files.py  health.py  pipelines.py  sandbox.py  sessions.py  stages.py  workflow.py
backend/api/schemas/: __init__.py  pipelines.py  project.py  sandbox.py
backend/api/services/: project_helpers.py
backend/code/data/sessions/: 1781898240340.json  1781905225827.json  1781909248390.json  1781928003456.json  1781928003456.json.backup  1781933967517.json  1781987743470.json  1781991105456.json  1782020978491.json  1782021169403.json  1782022579972.json  1782022589509.json  1782022763546.json  1782023687242.json  1782047024849.json  1782047666473.json  1782069797882.json  1782071365232.json  1782078221670.json  1782079124219.json  1782080979012.json
backend/code/data/tasks/: 20260620_134735_290bf528.json  20260621_140847_c47dc400.json  (+1 more)
backend/core/: __init__.py  auth.py  orchestrator.py
backend/core/agents/: __init__.py  base_agent.py  character_agent.py  editor_agent.py  reference_agent.py  script_agent.py  storyboard_agent.py  video_agent.py
backend/models/: config_model.py  file_reader.py  image_client.py  image_dashscope.py
